[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Website for HuSpaCy"
authors = ["Peter Berkecz <berkecz.peter@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pdoc3 = "^0.10.0"
spacy = "^3.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
